--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
         <!-- Title and meta -->
         <title>Muon file manager</title> 
         <link rel="apple-touch-icon" href="muon-touch.png" />
-		<link rel="icon" href="muon-fav.png" />
-		<meta name="description" content="A powerful and lightweight open source PHP/JavaScript-based file manager for your web space." /> 
+	<link rel="icon" href="muon-fav.png" />
+	<meta property="og:title" content="Muon file manager" />
+	<meta property="og:locale" content="en_US" />
+	<meta name="description" content="A powerful and lightweight open source PHP/JavaScript-based file manager for your web space." /> 
+	<meta name="og:description" content="A powerful and lightweight open source PHP/JavaScript-based file manager for your web space." /> 
+	<link rel="canonical" href="https://infoein.github.io/muon/" />
+	<meta property="og:url" content="https://infoein.github.io/muon/" />
+	<meta property="og:site_name" content="muon" />
+	<meta property="og:type" content="website" />
+	<meta name="twitter:card" content="summary" />
+	<meta property="twitter:title" content="Muon file manager" />
         <!-- Style -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
         <style type="text/css">
@@ -275,7 +284,7 @@
 					<span class="logo-subtitle">A meaningless estragon</span>
 				</span>
 			</a>
-            <a href="mailto:infoein@altervista.org" title="Mail: infoein@altervista.org" class="logo-trbt">
+			<a href="mailto:infoein@altervista.org" title="Mail: infoein@altervista.org" class="logo-trbt">
 				<svg class="logo-trbt-ic" viewBox="0 0 48 48">
 					<path d="M40 8H8c-2.21 0-3.98 1.79-3.98 4L4 36c0 2.21 1.79 4 4 4h32c2.21 0 4-1.79 4-4V12c0-2.21-1.79-4-4-4zm0 28H8V16l16 10 16-10v20zM24 22L8 12h32L24 22z"/>
 				</svg>
