--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 		
 		<!-- Logo -->
 		<header class="logo">
-			<a href="https://infoein.altervista.org/" title="InfoEin home" class="logo-inner">
+			<a href="https://infoein.github.io/" title="InfoEin home" class="logo-inner">
 				<img class="logo-icon" src="logo-circ.svg" /> 
 				<span class="logo-text">
 					<span class="logo-title">InfoEin</span>
