--- a/index.html
+++ b/index.html
@@ -277,10 +277,10 @@
 		
 		<!-- Logo -->
 		<header class="logo">
-			<a href="https://infoein.github.io/" title="InfoEin home" class="logo-inner">
+			<a href="https://infoein.github.io/" title="InfoEin home on GitHub" class="logo-inner">
 				<img class="logo-icon" src="logo-circ.svg" /> 
 				<span class="logo-text">
-					<span class="logo-title">InfoEin</span>
+					<span class="logo-title">InfoEin on GitHub</span>
 					<span class="logo-subtitle">A meaningless estragon</span>
 				</span>
 			</a>
