--- a/index.html
+++ b/index.html
@@ -212,6 +212,10 @@
 			.content h2, .content h3, .content p, .content ul, .content img{
 				margin-bottom:0.5em;
 			}
+			.content p.leftborder{
+				padding-left:1em;
+				border-left:0.2em solid #cccccc;
+			}
 			.content h2{
 				font-size:1.5em;
 				font-weight:bold;
@@ -345,7 +349,7 @@
 
 				<h2>Get Muon now!</h2>
 				<h3>It's not just free, it's open source!</h3>
-				<p><strong>You can get muon.php</strong> (as well as the source code) <strong>from <a target="blank" href="https://github.com/infoein/muon/releases" title="Releases on GitHub">GitHub</a></strong>, read the <a target="blank" href="https://github.com/infoein/muon#readme" title="Readme on GitHub">installation notes</a> and upload it to your web space. Alternatively, you can copy <a target="blank" href="https://raw.githubusercontent.com/infoein/muon/main/muon.php" title="Latest Muon code">this code</a> to a PHP file on your server, or directly download it via wget:</p>
+				<p><strong>You can get muon.php (as well as the source code) from <a target="blank" href="https://github.com/infoein/muon/releases" title="Releases on GitHub">GitHub</a></strong>, read the <a target="blank" href="https://github.com/infoein/muon#readme" title="Readme on GitHub">installation notes</a> and upload it to your web space. Alternatively, you can copy <a target="blank" href="https://raw.githubusercontent.com/infoein/muon/main/muon.php" title="Latest Muon code">this code</a> to a PHP file on your server, or directly download it via wget:</p>
 				<p><code>wget "https://raw.githubusercontent.com/infoein/muon/main/muon.php"</code></p>
 				<p><img src="opensource-dogs-meme.png" alt="Image" /></p>
 				
