--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
 				</ul>
 				
 				<h2>All in one file</h2>
-				<h3>Just 94kB, plain PHP, HTML and JavaScript!</h3>
-				<p>Muon’s code is compressed in a single 94kB PHP page (<em>muon.php</em>) and it’s ready to work out-of-the-box. It only requires a PHP (version 5 or newer) interpreter on the server, that is included by default in the majority of web hosting plans. All settings, including login credentials, are stored at the beginning of the file, and of course hidden to visitors, thus no database is required.</p>
+				<h3>Less than 100kB, plain PHP, HTML and JavaScript!</h3>
+				<p>Muon’s code is compressed in a single <100kB PHP page (<em>muon.php</em>) and it’s ready to work out-of-the-box. It only requires a PHP (version 5 or newer) interpreter on the server, that is included by default in the majority of web hosting plans. All settings, including login credentials, are stored at the beginning of the file, and of course hidden to visitors, thus no database is required.</p>
 				<p><code>
 					<img src="commodore-64.png" alt="Image" />
 					Actually, Muon would be too large for a Commodore 64's memory, but if you're using a newer machine you should definitely have no problems ;)
